complete picture container

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>WebMaster</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 	<link rel="stylesheet" href="helper.css">
+	<link href="https://fonts.googleapis.com/css?family=Fredoka+One|Open+Sans|Pacifico" rel="stylesheet">
 </head>
 <body>
 
@@ -48,6 +49,42 @@
 		 <img src="https://cdn.shopify.com/s/files/1/2805/9732/files/slider1_4261dd5a-b1b4-4841-883b-6fc60f2f66a1.jpg?v=1517572244">
 		 <a href="#" class="move-button"></a>
 		 <a href="#" class="move-button"></a>  
+	</div>
+</div>
+
+<div class="invisible-nav"></div>
+
+
+<div class= "container">
+	<div class="content">
+		<h5 class="small-title">We specialize in our passion</h5>
+		<h2 style="color: #7e4c4f">Caring for Pets & Sheltering</h2>
+		<div class="row">
+			<div class="col-md-4">
+				<div class="col-content">
+					<img src="https://cdn.shopify.com/s/files/1/2805/9732/files/img1_776e64b3-cd9c-48e9-8b39-23aa6817d59d.jpg?v=1517385941">
+					<h5 style="color: #7e4c4f">Dalmatian</h5>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
+					<a href="#" class="button">Shop Now</a>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="col-content">
+					<img src="https://cdn.shopify.com/s/files/1/2805/9732/files/img2.jpg?v=1517386074">
+					<h5 style="color: #7e4c4f">Dalmatian</h5>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
+					<a href="#" class="button">Shop Now</a>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="col-content">
+					<img src="https://cdn.shopify.com/s/files/1/2805/9732/files/img3_b436fda8-ccbd-46c8-bb8a-b65246db94b0.jpg?v=1517386354">
+					<h5 style="color: #7e4c4f">Dalmatian</h5>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
+					<a href="#" class="button">Shop Now</a>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
 
