finish move slide

--- a/index.html
+++ b/index.html
@@ -145,9 +145,21 @@ Come to Isaac Pet Care and leave your darlings...you will come again and again a
 
 <div class="container" id="section-move-slide">
 	<div class="content-block">
-		
+		<ul>
+			<li><a href="#" class="move-button"></a></li>
+			<li class="content-block-item"></li>
+			<li class="content-block-item">
+				<h5 style="">Pups Formular</h5>
+				<h5>Brand: Pedigee</h5>
+				<hr>
+				<h3 style="font-size: 20px; color: #f6ab4a;">$600</h3>
+			</li>
+			<li><a href="#" class="move-button"></a></li>
+		</ul>
 	</div>
 </div>
+
+
 
 </body>
 </html>
