hover-pic section

--- a/index.html
+++ b/index.html
@@ -160,6 +160,30 @@ Come to Isaac Pet Care and leave your darlings...you will come again and again a
 </div>
 
 
+<div class="invisible-nav"></div>
+
+
+<div class="container">
+	<div class="content">
+		<h5 class="small-title" >Packages</h5>
+		<h2 class="big-title" >Wellness Plans</h2>
+		<div class="row" style="margin-top: 150px;">
+			<div class="col-lg-4 active-col" style="background-color: #f7f7f7;">
+				<img src="./picture/img1_a95336b9-d626-444e-a924-fb636053610e.jpg" class="highlight-image">
+				<h2 class="big-title" style="font-size: 30px;">We care for pups</h2>
+				<p class="bottom-dashed normal-text">Combing & Shampooing</p>
+				<p class="bottom-dashed normal-text">Combing & Shampooing</p>
+				<p class="bottom-dashed normal-text">Combing & Shampooing</p>
+				<p class="bottom-dashed normal-text">Combing & Shampooing</p>
+				<p class="bottom-dashed normal-text">Combing & Shampooing</p>
+				<h5 class="big-title">$50 per week</h5>
+				<a href="#" class="button" style="font-family: none;">Book Nows</a>
+			</div>
+		</div>
+	</div>
+</div>
+
+
 
 </body>
 </html>
