--- a/index.html
+++ b/index.html
@@ -183,6 +183,36 @@ Come to Isaac Pet Care and leave your darlings...you will come again and again a
 				<a href="#" class="button" style="font-family: none;">Book Nows</a>
 				</div>
 			</div>
+			<div class="col-lg-4 active-col" style="background-color: #f7f7f7;">
+				<div class="flex-3">
+					<img src="./picture/img2.jpg" class="highlight-image">
+				</div>
+				<div class="flex-7">
+				<h2 class="big-title" style="font-size: 30px;">We care for pups</h2>
+				<p class="bottom-dashed normal-text">Combing & Shampooing</p>
+				<p class="bottom-dashed normal-text">Combing & Shampooing</p>
+				<p class="bottom-dashed normal-text">Combing & Shampooing</p>
+				<p class="bottom-dashed normal-text">Combing & Shampooing</p>
+				<p class="bottom-dashed normal-text">Combing & Shampooing</p>
+				<h5 class="big-title">$50 per week</h5>
+				<a href="#" class="button" style="font-family: none;">Book Nows</a>
+				</div>
+			</div>
+			<div class="col-lg-4 active-col" style="background-color: #f7f7f7;">
+				<div class="flex-3">
+					<img src="./picture/img3_b436fda8-ccbd-46c8-bb8a-b65246db94b0.jpg" class="highlight-image">
+				</div>
+				<div class="flex-7">
+				<h2 class="big-title" style="font-size: 30px;">We care for pups</h2>
+				<p class="bottom-dashed normal-text">Combing & Shampooing</p>
+				<p class="bottom-dashed normal-text">Combing & Shampooing</p>
+				<p class="bottom-dashed normal-text">Combing & Shampooing</p>
+				<p class="bottom-dashed normal-text">Combing & Shampooing</p>
+				<p class="bottom-dashed normal-text">Combing & Shampooing</p>
+				<h5 class="big-title">$50 per week</h5>
+				<a href="#" class="button" style="font-family: none;">Book Nows</a>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
