--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 	<div class="content">
 		<h5 class="small-title">We specialize in our passion</h5>
 		<h2 style="color: #7e4c4f">Caring for Pets & Sheltering</h2>
-		<div class="row">
-			<div class="col-lg-4">
+		<div class="row pet-shel">
+			<div class="col-lg-4 pet-item">
 				<div class="col-content">
 					<img src="https://cdn.shopify.com/s/files/1/2805/9732/files/img1_776e64b3-cd9c-48e9-8b39-23aa6817d59d.jpg?v=1517385941">
 					<h5 style="color: #7e4c4f">Dalmatian</h5>
@@ -68,7 +68,7 @@
 					<a href="#" class="button">Shop Now</a>
 				</div>
 			</div>
-			<div class="col-lg-4">
+			<div class="col-lg-4 pet-item">
 				<div class="col-content">
 					<img src="https://cdn.shopify.com/s/files/1/2805/9732/files/img2.jpg?v=1517386074">
 					<h5 style="color: #7e4c4f">Dalmatian</h5>
@@ -76,7 +76,7 @@
 					<a href="#" class="button">Shop Now</a>
 				</div>
 			</div>
-			<div class="col-lg-4">
+			<div class="col-lg-4 pet-item">
 				<div class="col-content">
 					<img src="https://cdn.shopify.com/s/files/1/2805/9732/files/img3_b436fda8-ccbd-46c8-bb8a-b65246db94b0.jpg?v=1517386354">
 					<h5 style="color: #7e4c4f">Dalmatian</h5>
@@ -167,7 +167,7 @@ Come to Isaac Pet Care and leave your darlings...you will come again and again a
 	<div class="content">
 		<h5 class="small-title" >Packages</h5>
 		<h2 class="big-title" >Wellness Plans</h2>
-		<div class="row" style="margin-top: 150px;">
+		<div class="row petcare" style="margin-top: 150px;">
 			<div class="col-lg-4 active-col" style="background-color: #f7f7f7;">
 				<div class="flex-3">
 					<img src="./picture/img1_a95336b9-d626-444e-a924-fb636053610e.jpg" class="highlight-image">
@@ -179,8 +179,8 @@ Come to Isaac Pet Care and leave your darlings...you will come again and again a
 				<p class="bottom-dashed normal-text">Combing & Shampooing</p>
 				<p class="bottom-dashed normal-text">Combing & Shampooing</p>
 				<p class="bottom-dashed normal-text">Combing & Shampooing</p>
-				<h5 class="big-title">$50 per week</h5>
-				<a href="#" class="button" style="font-family: none;">Book Nows</a>
+				<h5 class="big-title price-pet">$50 per week</h5>
+				<a href="#" class="button button-dog" style="font-family: none;">Book Nows</a>
 				</div>
 			</div>
 			<div class="col-lg-4 active-col" style="background-color: #f7f7f7;">
@@ -216,6 +216,8 @@ Come to Isaac Pet Care and leave your darlings...you will come again and again a
 		</div>
 	</div>
 </div>
+
+
 
 
 
