--- a/index.html
+++ b/index.html
@@ -234,7 +234,25 @@ Come to Isaac Pet Care and leave your darlings...you will come again and again a
 <div class="container" id="section7">
 	<div class="content-block" style="height: 100%; padding-top: 5em;">
 		<div class="small-title" style="width: 100%;font-size: 20px;">We love Pets</div>
-		<div class="big-title">Taking Care of Pets</div>
+		<div class="big-title" style="color: white; font-weight: 1em;">Taking Care of Pets</div>
+		<div class="speard-col-format" style="padding: 0 5em 0 5em;">
+			<div class="last-minus" style="text-align: left;">
+				<a href="#" class="special-text" style="padding-left: 0;">What is to be avoided</a>
+			</div>
+			<p class="simple-format">
+				tori haum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est elige ndi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptasi ass umenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis.
+			</p>
+			<div class="last-minus" style="text-align: left;">
+				<a href="#" class="special-text" style="padding-left: 0;">How frequently bath to be given</a>
+			</div>
+			<div class="last-minus" style="text-align: left;">
+				<a href="#" class="special-text" style="padding-left: 0;">What do you do in case of emergency</a>
+			</div>
+			<div class="last-minus" style="text-align: left;">
+				<a href="#" class="special-text" style="padding-left: 0;">Where our service are avaiable</a>
+			</div>
+		</div>
+	
 	</div>
 </div>
 
