update last sectio

--- a/index.html
+++ b/index.html
@@ -283,10 +283,51 @@ Come to Isaac Pet Care and leave your darlings...you will come again and again a
 					<a href="#" class="Read-more">Read More</a>
 				</div>
 			</div>
+			<div class="col-lg-12">
+				<div class="wrapper">
+					<ul class="circle-list"> 
+						<li class="actice-list-active"></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</div>
 	
 	
+</div>
+
+
+<div class="container" id="img-bgc">
+	<div class="content">
+		<div style="margin-top: 7em;">
+			<h5 class="small-title" style="font-size: 20px;font-weight: normal;">Customer Review</h5>
+			<h2 class="big-title" style="word-spacing: 5px;">Clients Are Saying</h2>
+		</div>
+		<div>
+			<p class="normal-text" style="font-size: 16px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur reiciendis, veritatis aliquam eius autem aspernatur.</p>
+			<div class="dev-info">
+				<img src="./picture/testimonial-author1_4b2d993f-70be-49cd-9815-974f88a89ca7_75x75.jpg">
+				<div>
+					<h3>Phillip Walker</h3>
+					<h5>Developer</h5>
+				</div>
+			</div>
+				<ul class="circle-list"> 
+						<li class="actice-list-active"></li>
+						<li></li>
+						<li></li>		
+				</ul>
+		</div>
+	</div>
 </div>
 
 
